added mongo db to pom

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>EZEats</title>
 </head>
 <body>
     <h1></h1>
-    <p>Welcome to <span th:text="${appName}">EZ Eats</p>
+    <p>Welcome to <span th:text="${appName}">EZ Eats</span></p>
 </body>
 </html>
