Added and linked CSS file to html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>EZEats</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1></h1>
-    <p>Welcome to <span th:text="${appName}">EZ Eats</span></p>
+    <p>Welcome to EZ Eats</p>
 </body>
 </html>
