Added a Title, Subtitle, and the Diet Choice Boxes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1></h1>
-    <p>Welcome to EZ Eats</p>
+    <h1 id = "Title">EZ Eats</h1>
+    <h2 id = "Subtitle">A personalized diet builder</h2>
+    <div class = "Diet">
+        <button type="button">Anything</button>
+        <button type="button">Vegetarian</button>
+        <button type="button">Vegan</button>
+        <button type="button">Paleo</button>
+        <button type="button">Keto</button>
+    </div>
 </body>
 </html>
