--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,12 +12,38 @@ button
 {
     text-align: center;
     background-color: rgba(255, 255, 255, 1.0);
-    width: 10%;
-    aspect-ratio: 2/1;
     border-width: medium;
 }
 
+.fiveB
+{
+    width: 10%;
+    aspect-ratio: 2/1;
+}
+
+.twoB
+{
+    width: 25%;
+    aspect-ratio: 5/1;
+}
+
+.twoF
+{
+    width: 25%;
+}
 .Diet
+{
+    display: flex;
+    justify-content: center;
+}
+
+.Gender
+{
+    display: flex;
+    justify-content: center;
+}
+
+.Height
 {
     display: flex;
     justify-content: center;
