--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <title>EZEats</title>
     <link rel="stylesheet" href="../static/style.css">
+    <meta name = "viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <h1 id = "Title">EZ Eats</h1>
     <h2 id = "Subtitle">A personalized diet builder</h2>
     <div class = "Diet">
-        <button type="button">Anything</button>
-        <button type="button">Vegetarian</button>
-        <button type="button">Vegan</button>
-        <button type="button">Paleo</button>
-        <button type="button">Keto</button>
+        <button type="button" class = "fiveB">Anything</button>
+        <button type="button" class = "fiveB">Vegetarian</button>
+        <button type="button" class = "fiveB">Vegan</button>
+        <button type="button" class = "fiveB">Paleo</button>
+        <button type="button" class = "fiveB">Keto</button>
+    </div>
+    <div class = "Gender">
+        <button type="button" class = "twoB">Male</button>
+        <button type="button" class = "twoB">Female</button>
+    </div>
+    <div class = "Height">
+        <form>
+            <input type = "text" class = "twoF"> <label>ft</label>
+            <input type = "text" class = "twoF"><label>in</label>
+        </form>
     </div>
 </body>
 </html>
