--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,9 +19,8 @@
         <button type="button" class="btn btn-outline-primary">Keto</button>
     </div>
     <div class="btn-group" role="group" aria-label="Basic outlined example">
-        <button type="button" class="btn btn-outline-primary">Left</button>
-        <button type="button" class="btn btn-outline-primary">Middle</button>
-        <button type="button" class="btn btn-outline-primary">Right</button>
+        <button type="button" class="btn btn-outline-primary">Male</button>
+        <button type="button" class="btn btn-outline-primary">Female</button>
     </div>
 <!--    <div class = "Diet">-->
 <!--        <button type="button" class = "fiveB">Anything</button>-->
