Added all the buttons and stuff. Still no labels. Dropdown doesn't work.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,6 +8,11 @@
     text-align: center;
 }
 
+.diet-type, .gender, .weight-goal
+{
+    display: flex;
+    justify-content: center;
+}
 
 /*button*/
 /*{*/
