--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,31 +11,45 @@
 <body>
     <h1 id="Title">EZ Eats</h1>
     <h2 id="Subtitle">A personalized diet builder</h2>
-    <div class="btn-group1" role="group" aria-label="Basic outlined example">
+
+    <div class="diet-type">
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button">Anything</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button">Vegetarian</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button">Vegan</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button">Paleo</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button">Keto</button>
     </div>
-    <div class="btn-group2" role="group" aria-label="Basic outlined example">
+
+    <div class="weight-goal">
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Lose</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Maintain</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Gain</button>
     </div>
-    <div class="btn-group3" role="group" aria-label="Basic outlined example">
+
+    <div class="gender">
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Male</button>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Female</button>
     </div>
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Weight" aria-label="Weight" aria-describedby="basic-addon2">
-        <span class="input-group-text" id="basic-addon2">lbs</span>
+
+    <div class="row g-3 align-items-center">
+        <div class="col-auto">
+            <label for="weight" class="col-form-label">Weight</label>
+        </div>
+        <div class="col-auto">
+            <input type="text" id="weight" class="form-control">
+        </div>
     </div>
-    <div class="btn-group4" role="group" aria-label="Basic outlined example">
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Low</button>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Medium</button>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">High</button>
+
+    <div class="row g-3 align-items-center">
+        <div class="col-auto">
+            <label for="body-fat" class="col-form-label">Body-fat</label>
+        </div>
+        <div class="col-auto">
+            <input type="text" id="body-fat" class="form-control">
+        </div>
     </div>
+
+
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Activity Level
