I have no idea what is going on

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,7 +8,7 @@
     text-align: center;
 }
 
-.diet-type, .gender, .weight-goal
+.gender, .weight-goal
 {
     display: flex;
     justify-content: center;
