--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,39 +13,42 @@
     <h1 id="Title">EZ Eats</h1>
     <h2 id="Subtitle">A personalized diet builder</h2>
 
-    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="btnradio" id="Anything" autocomplete="off" checked>
+    <div class="btn-group d-flex" role="group">
+        <input type="radio" class="btn-check" name="Diet-type" id="Anything" autocomplete="off">
         <label class="btn btn-outline-primary" for="Anything">Anything</label>
 
-        <input type="radio" class="btn-check" name="btnradio" id="Vegetarian" autocomplete="off">
-        <label class="btn btn-outline-primary" for="Vegetarian"">Vegetarian</label>
+        <input type="radio" class="btn-check" name="Diet-type" id="Vegetarian" autocomplete="off">
+        <label class="btn btn-outline-primary" for="Vegetarian">Vegetarian</label>
 
-        <input type="radio" class="btn-check" name="btnradio" id="Vegan" autocomplete="off">
+        <input type="radio" class="btn-check" name="Diet-type" id="Vegan" autocomplete="off">
         <label class="btn btn-outline-primary" for="Vegan">Vegan</label>
 
-        <input type="radio" class="btn-check" name="btnradio" id="Paleo" autocomplete="off">
+        <input type="radio" class="btn-check" name="Diet-type" id="Paleo" autocomplete="off">
         <label class="btn btn-outline-primary" for="Paleo">Paleo</label>
 
-        <input type="radio" class="btn-check" name="btnradio" id="Keto" autocomplete="off">
+        <input type="radio" class="btn-check" name="Diet-type" id="Keto" autocomplete="off">
         <label class="btn btn-outline-primary" for="Keto">Keto</label>
     </div>
+    <br>
+    <div class="btn-group d-flex" role="group">
+        <input type="radio" class="btn-check" name="Weight-goal" id="Lose" autocomplete="off">
+        <label class="btn btn-outline-primary" for="Lose">Lose</label>
 
-    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-        <label class="btn btn-outline-primary" for="btnradio1">Lose</label>
+        <input type="radio" class="btn-check" name="Weight-goal" id="Maintain" autocomplete="off">
+        <label class="btn btn-outline-primary" for="Maintain">Maintain</label>
 
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio2">Maintain</label>
-
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-        <label class="btn btn-outline-primary" for="btnradio3">Gain</label>
+        <input type="radio" class="btn-check" name="Weight-goal" id="Gain" autocomplete="off">
+        <label class="btn btn-outline-primary" for="Gain">Gain</label>
     </div>
+    <br>
+    <div class="btn-group d-flex" role="group">
+        <input type="radio" class="btn-check" name="Gender" id="Male" autocomplete="off">
+        <label class="btn btn-outline-primary" for="Male">Male</label>
 
-    <div class="gender">
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Male</button>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" aria-pressed="true">Female</button>
+        <input type="radio" class="btn-check" name="Gender" id="Female" autocomplete="off">
+        <label class="btn btn-outline-primary" for="Female">Female</label>
     </div>
-
+    <br>
     <div class="row g-3 align-items-center">
         <div class="col-auto">
             <label for="weight" class="col-form-label">Weight</label>
@@ -77,6 +80,7 @@
             <li><a class="dropdown-item" href="#">Extremely Active</a></li>
         </ul>
     </div>
+        <input class="btn btn-primary btn-lg" type="submit" value="Calculate">
 <!--    <div class = "Diet">-->
 <!--        <button type="button" class = "fiveB">Anything</button>-->
 <!--        <button type="button" class = "fiveB">Vegetarian</button>-->
