--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,11 +8,11 @@
     text-align: center;
 }
 
-.gender, .weight-goal
-{
-    display: flex;
-    justify-content: center;
-}
+/*.gender, .weight-goal*/
+/*{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*}*/
 
 /*button*/
 /*{*/
