--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <h1 id="Title">EZ Eats</h1>
     <h2 id="Subtitle">A personalized diet builder</h2>
-    <div class="container-flex px-5">
+    <div class="container-flex mx-5">
     <div class="btn-group d-flex mb-sm-2" role="group">
         <input type="radio" class="btn-check" name="Diet-type" id="Anything" autocomplete="off">
         <label class="btn btn-outline-primary text-black" for="Anything">Anything</label>
@@ -30,7 +30,7 @@
         <label class="btn btn-outline-primary text-black" for="Keto">Keto</label>
     </div>
 
-    <div class="btn-group d-flex mb-sm-2 role="group">
+    <div class="btn-group d-flex mb-sm-2">
         <input type="radio" class="btn-check" name="Weight-goal" id="Lose" autocomplete="off">
         <label class="btn btn-outline-primary text-black" for="Lose">Lose</label>
 
@@ -97,8 +97,9 @@
             </a></li>
         </ul>
     </div>
-
+        <a href="mealPlan.html">
         <input class="btn btn-primary" type="submit" value="Calculate">
+        </a>
     </div>
 </body>
 </html>
