--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>EZ Eats</title>
@@ -10,7 +10,6 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <h1  id="heading">Today's Meal Plan</h1>
-
   <div class="container-flex mx-5">
     <h2>Breakfast</h2>
     <div class="container-flex mx-4">
