Added a line to test Thymeleaf.

--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -13,6 +13,7 @@
   <div class="container-flex mx-5">
     <h2>Breakfast</h2>
     <div class="container-flex mx-4">
+      <p th:text="'Thymeleaf will display this'">text</p>
     </div>
     <div class="container-flex mx-4">
     </div>
