--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,18 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        // JavaScript code to check for the presence of the message attribute and display an alert
+        var incomplete = /*[[${message}]]*/ null;
+        if (incomplete) {
+            alert(message);
+        }
+        /*]]>*/
+    </script>
     <h1 id="Title">EZ Eats</h1>
-    <h2 id="Subtitle">A personalized diet builder</h2>
+    <h2 id="Subtitle">A personalized diet builder</h2>        <form method="post" th:action="@{/diet}">
+
     <div class="container-flex mx-5">
     <div class="btn-group d-flex mb-sm-2" role="group">
         <input type="radio" class="btn-check" name="pref" id="Anything" autocomplete="off">
@@ -64,43 +74,18 @@
 
 
     <div class="dropdown">
-        <button class="btn btn-outline-primary dropdown-toggle text-black mb-sm-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Activity Level
-        </button>
-<!--        <ul class="dropdown-menu">-->
-<!--            <li><a class="dropdown-item" href="#">Very Low</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">Low</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">Moderate</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">High</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">Very High</a></li>-->
-<!--        </ul>-->
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="veryLow" checked>
-                <label class="form-check-label" for="veryLow">Very Low</label>
-            </a></li>
-            <li><a class="dropdown-item" href="#">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="low" checked>
-                <label class="form-check-label" for="low">Low</label>
-            </a></li>
-            <li><a class="dropdown-item" href="#">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="moderate" checked>
-                <label class="form-check-label" for="moderate">Moderate</label>
-            </a></li>
-            <li><a class="dropdown-item" href="#">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="high" checked>
-                <label class="form-check-label" for="high">High</label>
-            </a></li>
-            <li><a class="dropdown-item" href="#">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="veryHigh" checked>
-                <label class="form-check-label" for="veryHigh">Very High</label>
-            </a></li>
-        </ul>
-        <form method="post" th:action="@{/submit-form}">
+        <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+            <option selected>Activity Level</option>
+            <option value="VERY_LOW">Very Low</option>
+            <option value="LOW">Low</option>
+            <option value="MODERATE">Moderate</option>
+            <option value="HIGH">High</option>
+            <option value="VERY_HIGH">Very High</option>
+        </select>
         <a href="mealPlan.html">
             <input class="btn btn-primary" type="submit" value="Calculate">
         </a>
-        </form>
-    </div>
+
+    </div></form>
 </body>
 </html>
