Added a form tag to the submit button.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,6 +49,7 @@
         <label class="btn btn-outline-primary text-black" for="Female">Female</label>
     </div>
 
+<!--        name later-->
     <div class="form-floating mb-sm-2">
         <input type="text" class="form-control" id="weight" placeholder="Weight">
         <label for="weight">Weight</label>
