Tried to change the color around the input boxes when it was clicked. Code is currently commented out because it doesn't work.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,23 +12,28 @@
     text-align: center;
 }
 
-/*.btn-outline-primary*/
-/*{*/
-/*    border: 1px solid #19B550 !important;*/
+.btn-outline-primary
+{
+    border: 1px solid #19B550 !important;
 
-/*}*/
+}
 
-/*.btn:hover*/
-/*{*/
-/*    background-color: #19B550 !important;*/
-/*    border-color: #19B550 !important;*/
-/*    transition: 0.5s !important;*/
-/*}*/
+.btn:hover
+{
+    background-color: #19B550 !important;
+    border-color: #19B550 !important;
+    transition: 0.5s !important;
+}
 
-/*.btn:active*/
+.btn:active
+{
+    background-color: #19B550 !important;
+    transition: 0.5s !important;
+}
+
+/*.form-floating:active*/
 /*{*/
-/*    background-color: #19B550 !important;*/
-/*    transition: 0.5s !important;*/
+/*    color: #19B550 !important;*/
 /*}*/
 
 /*.gender, .weight-goal*/
