--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -14,20 +14,20 @@
 
 .btn-outline-primary
 {
-    border: 1px solid #19B550 !important;
+    border: 1px solid var(--bs-teal) !important;
 
 }
 
 .btn:hover
 {
-    background-color: #19B550 !important;
-    border-color: #19B550 !important;
+    background-color: var(--bs-teal) !important;
+    border-color: var(--bs-teal) !important;
     transition: 0.5s !important;
 }
 
 .btn:active
 {
-    background-color: #19B550 !important;
+    background-color: var(--bs-teal) !important;
     transition: 0.5s !important;
 }
 
