--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>EZ Eats</title>
@@ -9,29 +9,38 @@
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <h1  id="heading">Today's Meal Plan</h1>
+  <h1>Today's Meal Plan</h1>
+  <h4 th:text=""></h4>
   <div class="container-flex mx-5">
     <h2>Breakfast</h2>
-    <div class="container-flex mx-4">
-      <p th:text="${appName}"></p>
-    </div>
-    <div class="container-flex mx-4">
+    <div class="container-flex mx-4" th:each="map : ${breakfast}">
+      <p th:text="${map.key.getName()}"></p>
+      <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
+      <p th:text="${map.value} + ' serving(s)'"></p>
+      <a th:href="${map.key.getRecipe()}">Recipe</a>
+      <hr>
     </div>
   </div>
 
   <div class="container-flex mx-5">
     <h2>Lunch</h2>
-    <div class="container-flex mx-4">
-    </div>
-    <div class="container-flex mx-4">
+    <div class="container-flex mx-4" th:each="map : ${lunch}">
+      <p th:text="${map.key.getName()}"></p>
+      <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
+      <p th:text="${map.value} + ' serving(s)'"></p>
+      <a th:href="${map.key.getRecipe()}">Recipe</a>
+      <hr>
     </div>
   </div>
 
   <div class="container-flex mx-5">
     <h2>Dinner</h2>
-    <div class="container-flex mx-4">
-    </div>
-    <div class="container-flex mx-4">
+    <div class="container-flex mx-4" th:each="map : ${dinner}">
+      <p th:text="${map.key.getName()}"></p>
+      <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
+      <p th:text="${map.value} + ' serving(s)'"></p>
+      <a th:href="${map.key.getRecipe()}">Recipe</a>
+      <hr>
     </div>
   </div>
 </body>
